# tree-sitter-pluto

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.pluto  test1.pluto  test2.pluto  tree-sitter-pluto.wasm  tree-sitter.json  x.pluto
bindings/c/: tree-sitter-pluto.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pluto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPluto/: pluto.h
bindings/swift/TreeSitterPlutoTests/: TreeSitterPlutoTests.swift
queries/: fold.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: test.pluto
