[package]
name = "tree-sitter-pluto"
description = "Tree-sitter grammar for the PLUTO scripting langauge used in LibreCube"
version = "0.1.0"
authors = ["Shaurya Gaur <shauryagaur07@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pluto"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/s7g4/zed-pluto"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
